# image_retrieval

./: .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml
image_retrieval/: modules.py
image_retrieval/augmentation/: __init__.py  abstract_augmentation.py  basic_aug.py  ssl_aug.py
image_retrieval/data/: __init__.py  cifar10.py  cifar100.py  imagenet.py  utils.py  utils_ssl.py
image_retrieval/metrics/: __init__.py  cosine.py
image_retrieval/models/: __init__.py  abstract_model.py  convnext.py  resnet.py
image_retrieval/modules/: __init__.py  arcface.py  arcface2.py  base_module.py  classification.py  metric_learning.py  softmax.py
image_retrieval/modules/helper/: __init__.py  retrieval.py
image_retrieval/modules/ssl/: __init__.py  fastsiam.py  simple_cluster.py  simproto.py  simsiam.py
image_retrieval/modules/ssl/simsiam2/: module.py  resnet.py  simsiam.py
image_retrieval/script/: train.py  train_classification.py
image_retrieval/utils/: plot.py
notebooks/: .gitignore  train.py  train_original.py  train_original_cifar_10.py
tests/: conftest.py
tests/integrations/: .gitignore  test_image_retrieval.py  test_training.py
tests/units/data/: test_cifar.py
tests/units/metrics/: test_cosine.py
tests/units/models/: test_convnext.py
