[tool.poetry]
name = "image_retrieval"
version = "0.1.0"
description = ""
authors = ["samsja <sami.jaghouar@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.0"
torchvision = "^0.13"
pytorch-lightning = "^1"
timm = "^0.6.7"
torchtyping = "^0.1.4"
torchmetrics = "^0.9.3"

[tool.poetry.dev-dependencies]
pytest = "^7"
ipykernel = "^6"
matplotlib = "^3"
ipywidgets = "^7"
jupyterlab-code-formatter = "^1"
black = "^22.08"
isort = "^5"
pre-commit = "^2"
jupyterlab = "^3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
